# alice-ticktick

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: nlu-grammar-sync.md
.github/workflows/: ci.yml
alice_ticktick/: __init__.py  config.py  main.py
alice_ticktick/dialogs/: __init__.py  filters.py  handlers.py  help_topics.py  intents.py  responses.py  router.py  states.py
alice_ticktick/ticktick/: __init__.py  client.py  models.py
docs/: CHROME_TESTING.md  PRD.md  SETUP.md  VOICE_TESTING.md  e2e-fix-plan.md
docs/grammars/: README.md  add_checklist_item.grammar  add_reminder.grammar  add_subtask.grammar  check_item.grammar  complete_task.grammar  create_project.grammar  create_recurring_task.grammar  create_task.grammar  delete_checklist_item.grammar  delete_task.grammar  edit_task.grammar  evening_briefing.grammar  list_projects.grammar  list_subtasks.grammar  list_tasks.grammar  morning_briefing.grammar  overdue_tasks.grammar  project_tasks.grammar  search_task.grammar  show_checklist.grammar  tests.yaml
scripts/: package.sh
tests/: conftest.py  test_config.py  test_date_parser.py  test_duration_parser.py  test_filters.py  test_fuzzy_search.py  test_handlers.py  test_handlers_briefing.py  test_handlers_duration.py  test_handlers_filtering.py  test_handlers_fuzzy.py  test_handlers_phase3.py  test_handlers_projects.py  test_help_topics.py  test_intents.py  test_main.py  test_models.py  test_priority_parser.py  test_recurrence_parser.py  test_reminder_parser.py  test_responses.py  test_ticktick_client.py
(+59 files in other folders)
